testdata/baselines/reference/submodule/conformance/privateNameStaticAccessorssDerivedClasses.errors.txt
privateNameStaticAccessorssDerivedClasses.ts(4,23): error TS2339: Property '#prop' does not exist on type '{ new (): Derived; method: (x: ???) => void; prototype: Derived; }'.
privateNameStaticAccessorssDerivedClasses.ts(9,23): error TS2339: Property '#prop' does not exist on type '{ new (): Derived; method: (x: ???) => void; prototype: Derived; }'.


==== privateNameStaticAccessorssDerivedClasses.ts (2 errors) ====
    class Base {
        static get #prop(): number { return  123; }
        static method(x: typeof Derived) {
            console.log(x.#prop);
                          ~~~~~
!!! error TS2339: Property '#prop' does not exist on type '{ new (): Derived; method: (x: ???) => void; prototype: Derived; }'.
        }
    }
    class Derived extends Base {
        static method(x: typeof Derived) {
            console.log(x.#prop);
                          ~~~~~
!!! error TS2339: Property '#prop' does not exist on type '{ new (): Derived; method: (x: ???) => void; prototype: Derived; }'.
        }
    }
    